--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-new comic strip by CSB coming here
+<!DOCTYPE html>
+<html>
+<head>
+    <title>singularity express comic strip</title>
+</head>
+<body>
+<H3>singularity express comic strip</H3>
+new comic strip from CSB coming here, stay tuned or refresh this page from time to time
+  <br><br>
+    <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 50%;">
 
-<br>
-
-page variant 1
+  <br><br>
+  page variant 2
+</body>
+</html>
