--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>singularity express comic strip</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2K7XXMLTZX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2K7XXMLTZX');
+</script>
 <body>
 <H3>singularity express comic strip</H3>
 new comic strip from CSB coming here, stay tuned or refresh this page from time to time
@@ -10,6 +19,6 @@ new comic strip from CSB coming here, stay tuned or refresh this page from time 
     <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 50%;">
 
   <br><br>
-  page variant 2
+  page variant 3
 </body>
 </html>
