--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </script>
 <body>
 <H3>singularity express comic strip</H3>
+    (new comic strip from CSB coming here, stay tuned or refresh this page from time to time)
     <div class="navigation">
         <button id="first">|&lt;</button>
         <button id="prev">&lt; Prev</button>
@@ -47,11 +48,10 @@
         <button id="next">Next &gt;</button>
         <button id="last">&gt;|</button>
     </div>
-new comic strip from CSB coming here, stay tuned or refresh this page from time to time
+    <div class="content active" id="page1">Page 1: Welcome to the example.
+        <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 100%;">
+    </div>
   <br><br>
-    <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 50%;">
-
-  <br><br>
-  page variant 4
+  page variant 6
 </body>
 </html>
