--- a/index.html
+++ b/index.html
@@ -42,16 +42,23 @@
 <H3>singularity express comic strip</H3>
     (new comic strip from CSB coming here, stay tuned or refresh this page from time to time)
     <div class="navigation">
-        <button id="first">|&lt;</button>
-        <button id="prev">&lt; Prev</button>
-        <button id="random">Random</button>
-        <button id="next">Next &gt;</button>
-        <button id="last">&gt;|</button>
+        <button class="first">|&lt;</button>
+        <button class="prev">&lt; Prev</button>
+        <button class="random">Random</button>
+        <button class="next">Next &gt;</button>
+        <button class="last">&gt;|</button>
     </div>
     <div class="content active" id="page1">Page 1: Welcome to the example.
-        <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 100%;">
+        <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 80%;">
+    </div>
+    <div class="navigation">
+        <button class="first">|&lt;</button>
+        <button class="prev">&lt; Prev</button>
+        <button class="random">Random</button>
+        <button class="next">Next &gt;</button>
+        <button class="last">&gt;|</button>
     </div>
   <br><br>
-  page variant 6
+  page variant 8
 </body>
 </html>
