--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button class="last">&gt;|</button>
     </div>
     <div class="content active" id="page1">Page 1: Welcome to the example.
-        <img src="https://singularity.express/images/2019-05-12-01.png" alt="Example Image" style="width: 80%;">
+        <img src="https://singularity.express/images/2017-04-14-01.jpg" alt="Example Image" style="width: 80%;">
     </div>
     <div class="navigation">
         <button class="first">|&lt;</button>
@@ -59,6 +59,6 @@
         <button class="last">&gt;|</button>
     </div>
   <br><br>
-  page variant 8
+  page variant 9
 </body>
 </html>
