--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button class="next">Next &gt;</button>
         <button class="last">&gt;|</button>
     </div>
-    <div class="content active" id="page1">Page 1: Welcome to the example.
+    <div class="content active" id="page1">some old comic strip from CSB, testing only
         <img src="https://singularity.express/images/2017-04-14-01.jpg" alt="Example Image" style="width: 80%;">
     </div>
     <div class="navigation">
@@ -59,6 +59,6 @@
         <button class="last">&gt;|</button>
     </div>
   <br><br>
-  page variant 9
+  page variant 11
 </body>
 </html>
