--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 <H3>singularity express comic strip</H3>
     (new comic strip from CSB coming here, stay tuned or refresh this page from time to time)
     <div class="navigation">
-        <button class="first">|&lt;</button>
-        <button class="prev">&lt; Prev</button>
-        <button class="random">Random</button>
-        <button class="next">Next &gt;</button>
-        <button class="last">&gt;|</button>
+        <button id="first">|&lt;</button>
+        <button id="prev">&lt; Prev</button>
+        <button id="random">Random</button>
+        <button id="next">Next &gt;</button>
+        <button v="last">&gt;|</button>
     </div>
     <div class="content active" id="page1">some old comic strip from CSB, testing only
         <img id="comicstrip" src="https://singularity.express/images/2017-04-14-01.jpg" alt="Example Image" style="width: 80%;">
     </div>
     <div class="navigation">
-        <button class="first2">|&lt;</button>
-        <button class="prev2">&lt; Prev</button>
-        <button class="random2">Random</button>
-        <button class="next2">Next &gt;</button>
-        <button class="last2">&gt;|</button>
+        <button id="first2">|&lt;</button>
+        <button id="prev2">&lt; Prev</button>
+        <button id="random2">Random</button>
+        <button id="next2">Next &gt;</button>
+        <button id="last2">&gt;|</button>
     </div>
   <br><br>
   page variant 14
