--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button id="prev">&lt; Prev</button>
         <button id="random">Random</button>
         <button id="next">Next &gt;</button>
-        <button v="last">&gt;|</button>
+        <button id="last">&gt;|</button>
     </div>
     <div class="content active" id="page1">some old comic strip from CSB, testing only
         <img id="comicstrip" src="https://singularity.express/images/2017-04-14-01.jpg" alt="Example Image" style="width: 80%;">
@@ -59,7 +59,7 @@
         <button id="last2">&gt;|</button>
     </div>
   <br><br>
-  page variant 15
+  page variant 16
 
     <script>
         function changeImageSrc(newSrc) {
